--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/markdownit": "^1.2.9",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "frontmatter-markdown-loader": "^3.3.0",
     "nuxt": "^2.0.0"
   },
