--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-blog",
+  "name": "fizjonaturalnie",
   "version": "1.0.0",
   "description": "fizjonaturalnie blog",
   "author": "jakubgania",
