--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fizjonaturalnie",
   "version": "1.0.0",
   "description": "fizjonaturalnie blog",
-  "author": "jakubgania",
+  "author": "Jakub Gania",
   "private": true,
   "config": {
     "nuxt": {
@@ -23,11 +23,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "frontmatter-markdown-loader": "^3.3.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "2.14.12",
     "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {}
