--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
+    "@babel/core": "^7.13.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/axios": "^5.12.5",
-    "@nuxtjs/markdownit": "^1.2.9",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "frontmatter-markdown-loader": "^3.3.0",
     "nuxt": "2.14.12",
     "nuxt-fontawesome": "^0.4.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.17"
+  }
 }
